--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,4 +24,4 @@ jobs:
 
             - run: npm pkg set version=${GITHUB_REF_NAME}
 
-            - run: npm publish --provenance --access=public
+            - run: npm publish --access=public
