--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,8 +20,11 @@ jobs:
                   node-version: 24
                   registry-url: 'https://registry.npmjs.org/'
 
+            - name: fix auth token for OIDC
+              run: echo "NODE_AUTH_TOKEN=" >> $GITHUB_ENV
+
             - run: npm ci
 
             - run: npm pkg set version=${GITHUB_REF_NAME}
 
-            - run: npm publish --access=public
+            - run: npm publish --provenance --access=public
