--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,13 +18,13 @@ jobs:
             - uses: actions/setup-node@v4
               with:
                   node-version: 24
+                  cache: 'npm'
                   registry-url: 'https://registry.npmjs.org/'
-
-            - name: fix auth token for OIDC
-              run: echo "NODE_AUTH_TOKEN=" >> $GITHUB_ENV
 
             - run: npm ci
 
             - run: npm pkg set version=${GITHUB_REF_NAME}
 
-            - run: npm publish --provenance --access=public
+            - run: npm publish --access=public
+              env:
+                  NODE_AUTH_TOKEN:
