--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "name": "@hyqo/nanoapi",
     "version": "0.0.0-dev",
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/hyqo/nanoapi"
+    },
     "scripts": {
         "dev": "vite dev",
         "build": "vite build && npm run prepack",
